[configurator] fix null icon [ui] collapserow: pointer cursor

--- a/ajenti/plugins/main/content/css/controls.standard.i.less
+++ b/ajenti/plugins/main/content/css/controls.standard.i.less
@@ -343,6 +343,7 @@
 		//.box-shadow(@mainPaneShadow);
 
 		>.header {
+			cursor: pointer;
 			//height: @controlHeight + 2px;
 
 			//background: #eee;
